# csdc

./: .gitignore  Makefile  README.md  cabal.project  config.json  default.nix  release.nix  secret-model.json  shell.nix  spec.md  test.sh
.github/workflows/: build.yaml
csdc-api/: csdc-api.cabal
csdc-api/app/: Main.hs
csdc-api/src/CSDC/: API.hs  Action.hs  Config.hs  DAO.hs  Daemon.hs  FileServer.hs  IPFS.hs  Image.hs  Mail.hs  SQL.hs
csdc-api/src/CSDC/API/: Auth.hs  DAO.hs  Network.hs
csdc-api/src/CSDC/Daemon/: Mail.hs
csdc-api/src/CSDC/Mail/: Templates.hs
csdc-api/src/CSDC/Mail/Templates/: TH.hs  confirmation.md  invitation.md
csdc-api/src/CSDC/SQL/: Decoder.hs  Elections.hs  Encoder.hs  Files.hs  Forum.hs  Mail.hs  MailInvitations.hs  Members.hs  MessageMembers.hs  MessageSubparts.hs  Persons.hs  Subparts.hs  Units.hs
csdc-auth/: csdc-auth.cabal
csdc-auth/app/: Main.hs
csdc-auth/src/CSDC/: Auth.hs
csdc-auth/src/CSDC/Auth/: Admin.hs  OAuth2.hs  ORCID.hs  Template.hs  User.hs
csdc-auth/src/CSDC/Auth/ORCID/: OAuth2.hs
csdc-base/: csdc-base.cabal
csdc-base/src/CSDC/: Aeson.hs  Error.hs  Prelude.hs  User.hs
csdc-base/src/CSDC/DAO/: Class.hs  Mock.hs  Types.hs
csdc-base/src/CSDC/Data/: File.hs  Id.hs  IdMap.hs  RIO.hs
csdc-base/src/CSDC/Network/: Class.hs  Mock.hs  Types.hs
csdc-base/src/CSDC/SQL/: QQ.hs
csdc-base/src/CSDC/Types/: DAO.hs  Election.hs  File.hs  Forum.hs  GUI.hs  Id.hs
csdc-gui/: default.nix  elm-srcs.nix  elm.json  shell.nix
csdc-gui/src/: API.elm  Field.elm  Form.elm  Input.elm  Main.elm  Notification.elm  Page.elm  Types.elm  Validation.elm  WebData.elm
csdc-gui/src/CSDC/: API.elm  Form.elm  Input.elm  Notification.elm  Page.elm  Types.elm
csdc-gui/src/CSDC/Component/: Admin.elm  Column.elm  DotMenu.elm  Explorer.elm  ImageUpload.elm  InvitationMember.elm  Menu.elm  MessageMember.elm  MessageSubpart.elm  Modal.elm  Navbar.elm  NewMember.elm  NewPerson.elm  NewUnit.elm  Panel.elm  Preview.elm  PreviewMessage.elm  PreviewPerson.elm  PreviewReply.elm  PreviewUnit.elm  Progress.elm  ReplyMember.elm  ReplySubpart.elm  Search.elm  Studio.elm  ViewPerson.elm  ViewUnit.elm  ViewUnitAdmin.elm
csdc-gui/src/CSDC/Component/Admin/: NewMember.elm  NewMessage.elm  NewPerson.elm  NewReply.elm  NewSubpart.elm  NewUnit.elm
csdc-gui/src/CSDC/Form/: Image.elm  Message.elm  Person.elm  PersonImage.elm  Post.elm  Reply.elm  ReplySeen.elm  SubmissionMember.elm  Thread.elm  Unit.elm  UnitDelete.elm
csdc-gui/src/CSDC/UI/: BoxFile.elm  BoxImageText.elm  BoxItem.elm  BoxMessage.elm  BoxPost.elm  BoxReply.elm  BoxThread.elm  Column.elm  DotMenu.elm  ImageUpload.elm  Menu.elm  Modal.elm  Navbar.elm  Preview.elm  PreviewImageText.elm  Progress.elm  ScrollList.elm  Search.elm  Tabs.elm
csdc-gui/src/CSDC/View/: Admin.elm  Explorer.elm  Input.elm  InvitationMember.elm  Menu.elm  MessageCreate.elm  MessageMember.elm  MessagePreview.elm  MessageSubpart.elm  NewPerson.elm  NewUnit.elm  Notification.elm  Person.elm  PersonPreview.elm  PreviewMessage.elm  PreviewPerson.elm  PreviewReply.elm  PreviewUnit.elm  ReplyMember.elm  ReplyPreview.elm  ReplySubpart.elm  Studio.elm  Unit.elm  UnitAdmin.elm  UnitFiles.elm  UnitForum.elm  UnitInfo.elm  UnitPreview.elm  ViewPerson.elm  ViewUnit.elm  ViewUnitAdmin.elm
csdc-gui/src/CSDC/View/Admin/: NewMember.elm  NewMessage.elm  NewPerson.elm  NewReply.elm  NewSubpart.elm  NewUnit.elm
csdc-gui/src/Form/: Image.elm  MailInvitation.elm  MemberDelete.elm  Message.elm  Person.elm  Post.elm  Reply.elm  ReplySeen.elm  SignIn.elm  SignUp.elm  SubmissionMember.elm  Thread.elm  Unit.elm  UnitChair.elm  UnitDelete.elm
csdc-gui/src/Page/: Explorer.elm  Person.elm  SignIn.elm  Studio.elm  Unit.elm  UnitAdmin.elm  UnitFiles.elm  UnitForum.elm  UnitInfo.elm
csdc-gui/src/UI/: BoxFile.elm  BoxImageText.elm  BoxItem.elm  BoxMessage.elm  BoxPost.elm  BoxReply.elm  BoxThread.elm  Column.elm  DotMenu.elm  ImageUpload.elm  Inbox.elm  Menu.elm  Modal.elm  Navbar.elm  Preview.elm  PreviewImageText.elm  Progress.elm  Search.elm  Tabs.elm
csdc-gui/src/View/: Explorer.elm  Person.elm  Studio.elm  Unit.elm  UnitAdmin.elm  UnitFiles.elm  UnitForum.elm  UnitInfo.elm
csdc-orcid/: csdc-orcid.cabal
csdc-orcid/app/: Main.hs
csdc-orcid/src/CSDC/: ORCID.hs
csdc-orcid/src/CSDC/ORCID/: OAuth2.hs
database/: ipfs.yml  postgresql.yml  servers.json
database/migrations/: 000-initial.sql
deployment/: README.md  default.nix  deploy.sh  run.sh
nix/: cabal.nix  default.nix  nixpkgs.nix  overlay.nix
scripts/: admin-request
www/: index.html
