cabal-version: 2.2
name:
  csdc-api
version:
  0.1.0.0
synopsis:
  API for the CSDC network.
description:
  API library for the CSDC network.
license:
  BSD-3-Clause
author:
  Juan Raphael Diaz Simoes
maintainer:
  mail@guaraqe.gq
build-type:
  Simple

common dependencies
  build-depends:
    csdc-auth,
    csdc-base,
    aeson,
    aeson-pretty,
    base,
    bytestring,
    ghc-prim,
    hasql,
    mtl,
    servant,
    servant-server,
    text,
    wai-app-static

common extensions
  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    TypeOperators

library
  import: dependencies, extensions
  exposed-modules:
    CSDC.Config
    CSDC.API
    CSDC.API.DAO
    CSDC.SQL
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  default-language:
    Haskell2010

executable csdc-server
  import: dependencies, extensions
  main-is:
    Main.hs
  build-depends:
    csdc-api,
    wai,
    wai-cors,
    wai-logger,
    warp
  hs-source-dirs:
    app
  ghc-options:
    -Wall
  default-language:
    Haskell2010
