cabal-version: 2.2
name:
  csdc-api
version:
  0.1.0.0
synopsis:
  API for the CSDC network.
description:
  API library for the CSDC network.
license:
  BSD-3-Clause
author:
  Juan Raphael Diaz Simoes
maintainer:
  mail@guaraqe.gq
build-type:
  Simple

common dependencies
  build-depends:
    csdc-auth,
    csdc-base,
    aeson,
    aeson-pretty,
    base,
    binary,
    bytestring,
    filepath,
    ghc-prim,
    hasql,
    hasql-migration,
    hasql-transaction,
    mtl,
    network-uri,
    random,
    servant,
    servant-server,
    text,
    time,
    wai,
    wai-app-static,
    wai-extra,
    -- Just for image generation
    colour,
    svg-builder,
    diagrams-lib,
    diagrams-svg,

common extensions
  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    TypeOperators

library
  import: dependencies, extensions
  exposed-modules:
    CSDC.Config
    CSDC.API
    CSDC.API.DAO
    CSDC.DAO
    CSDC.FileServer
    CSDC.Image
    CSDC.SQL
    CSDC.SQL.Decoder
    CSDC.SQL.Encoder
    CSDC.SQL.Forum
    CSDC.SQL.Members
    CSDC.SQL.MessageMembers
    CSDC.SQL.MessageSubparts
    CSDC.SQL.Persons
    CSDC.SQL.Subparts
    CSDC.SQL.Units
    CSDC.SQL.Files
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  default-language:
    Haskell2010

executable csdc-server
  import: dependencies, extensions
  main-is:
    Main.hs
  build-depends:
    csdc-api,
    wai,
    wai-cors,
    wai-logger,
    warp
  hs-source-dirs:
    app
  ghc-options:
    -Wall
  default-language:
    Haskell2010
