cabal-version: 2.2
name:
  csdc-api
version:
  0.1.0.0
synopsis:
  API for the CSDC network.
description:
  API library for the CSDC network.
license:
  BSD-3-Clause
author:
  Juan Raphael Diaz Simoes
maintainer:
  mail@guaraqe.gq
build-type:
  Simple

common dependencies
  build-depends:
    csdc-base,
    aeson,
    aeson-pretty,
    base,
    binary,
    base64-bytestring,
    bytestring,
    filepath,
    ghc-prim,
    hasql,
    hasql-migration,
    hasql-transaction,
    ipfs,
    mime-mail,
    mtl,
    network,
    network-uri,
    password,
    random,
    resource-pool,
    servant,
    servant-auth,
    servant-auth-server,
    servant-multipart,
    servant-server,
    smtp-mail,
    text,
    time,
    typed-process,
    unliftio,
    wai,
    wai-app-static,
    wai-extra,
    -- Email
    blaze-html,
    markdown,
    stache,
    template-haskell,
    -- Just for image generation
    colour,
    svg-builder,
    diagrams-lib,
    diagrams-svg,

common extensions
  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    TypeOperators
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    ImportQualifiedPost

library
  import: dependencies, extensions
  exposed-modules:
    CSDC.Action
    CSDC.Config
    CSDC.Daemon
    CSDC.Daemon.Mail
    CSDC.API
    CSDC.API.Auth
    CSDC.API.DAO
    CSDC.DAO
    CSDC.FileServer
    CSDC.Image
    CSDC.IPFS
    CSDC.Mail
    CSDC.Mail.Templates
    CSDC.Mail.Templates.TH
    CSDC.SQL
    CSDC.SQL.Decoder
    CSDC.SQL.Encoder
    CSDC.SQL.Elections
    CSDC.SQL.Forum
    CSDC.SQL.Members
    CSDC.SQL.MessageMembers
    CSDC.SQL.MessageSubparts
    CSDC.SQL.Persons
    CSDC.SQL.Subparts
    CSDC.SQL.Units
    CSDC.SQL.Files
    CSDC.SQL.Mail
    CSDC.SQL.MailInvitations
  hs-source-dirs:
    src
  ghc-options:
    -Wall
    -- record updates
    -fno-warn-ambiguous-fields
  default-language:
    Haskell2010

executable csdc-server
  import: dependencies, extensions
  main-is:
    Main.hs
  build-depends:
    csdc-api,
    wai,
    wai-cors,
    wai-logger,
    warp
  hs-source-dirs:
    app
  ghc-options:
    -Wall
  default-language:
    Haskell2010
