name:
  csdc-base
version:
  0.1.0.0
synopsis:
  Base library for the CSDC network.
description:
  Base library for the CSDC network.
license:
  BSD3
author:
  Juan Raphael Diaz Simoes
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    CSDC.Aeson
    CSDC.Data.Id
    CSDC.Data.IdMap
    CSDC.Data.RIO
    CSDC.Error
    CSDC.DAO.Types
    CSDC.Prelude
  build-depends:
    csdc-auth,
    aeson,
    base,
    containers,
    http-api-data,
    lens,
    mtl,
    text
  hs-source-dirs:
    src
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    MultiParamTypeClasses
    FunctionalDependencies
    RankNTypes
  ghc-options:
    -Wall
  default-language:
    Haskell2010
