name:
  csdc-base
version:
  0.1.0.0
synopsis:
  Base library for the CSDC network.
description:
  Base library for the CSDC network.
license:
  BSD3
author:
  Juan Raphael Diaz Simoes
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    CSDC.Prelude
    CSDC.SQL.QQ
    CSDC.Types.Id
    CSDC.Types.Election
    CSDC.Types.File
    CSDC.Types.Forum
    CSDC.Types.GUI
    CSDC.Types.DAO
  build-depends:
    aeson,
    base64-bytestring,
    bytestring,
    base,
    containers,
    cryptohash-md5,
    hashable,
    http-api-data,
    lens,
    password,
    mtl,
    template-haskell,
    text,
    time,
    unordered-containers,
    uuid
  hs-source-dirs:
    src
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    NoFieldSelectors
    OverloadedRecordDot
    ImportQualifiedPost
  ghc-options:
    -Wall
  default-language:
    Haskell2010
